--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -3,14 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DOM</title>
+    <title>DOM learning</title>
+    <style>
+        .parent{
+            background-color: #212121;
+            color: #fff;
+        }
+    </style>
 </head>
-<body>
-   <div class="parent">
-    <div class="monday"></div>
-    <div class="tuesday"></div>
-    <div class="wednesday"></div>
-    <div class="thrusday"></div>
-   </div> 
+<body class="parent">
+   <div >
+   <h1 id="title" class="heading">DOM learning from Youtube
+    <span style="display:none">test run buddy</span>
+</h1> 
+<h2>Lorem ipsum dolor sit amet.</h2>
+<h2>Lorem ipsum dolor sit amet consectetur.</h2>
+   <h2 id="hey">Lorem, ipsum dolor.</h2>
+   <p>Lorem ipsum dolor sit.</p>
+   <input type="password" name="" id="">
+    
+   <ul>
+    <li class="list-item">roshan</li>
+    <li class="list-item">ani</li>
+    <li class="list-item">dinya</li>
+    <li class="list-item">dharma</li>
+   </ul>
+</div> 
 </body>
 </html>
